[package]
name = "ascii-hangman"
version = "4.9.1"
authors = ["Jens Getreu <getreu@web.de>"]
edition = "2018"
readme = "README.md"
categories = ["command-line-utilities", "games", "text-processing"]
description = "customizable Hangman game for kids with ASCII-art rewarding"
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.7.3"
crossterm = "0.17.0"
thiserror = "1.0.13"
