[package]
name = "ascii-hangman"
version = "5.2.0"
authors = ["Jens Getreu <getreu@web.de>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities", "games", "text-processing"]
description = "customizable Hangman game with ASCII-art rewarding for children"
repository = "https://github.com/getreu/ascii-hangman"
documentation = "https://getreu.gitlab.io/_downloads/ascii-hangman--manual.pdf"

[package.metadata.deb]
maintainer = "Jens Getreu, <getreu@web.de>"
copyright = "2015-2020, Jens Getreu <getreu@web.de>"
depends = "$auto"
extended-description = '''
A little game designed for primary kids to revise vocabulary in classroom.
Setting up the vocabulary list is part of the learning process.  Hangman is a
paper and pencil guessing game for two or more players. One player thinks of a
word, phrase or sentence and the other tries to guess it by suggesting letters
or numbers, within a certain number of guesses. In this version for children
the computer selects a word, phrase or sentence randomly out of a word-list
defined in a configuration file. As a reward, with every guessed letter, some
ASCII-art is gradually disclosed.
'''

[dependencies]
thiserror = "1.0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.7.3", features = ["getrandom"] }
getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }
yew-macro = "0.17.0"
yew = "0.17.0"
wasm-bindgen = "0.2.64"
js-sys = "0.3.41"

# this is we need for the console application
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.17.5"
rand = "0.7.3"

